--- a/app/assets/stylesheets/signup/component.css
+++ b/app/assets/stylesheets/signup/component.css
@@ -186,15 +186,15 @@ body {
 
 .page-right {
 	left: 25%;
-	outline: 5px solid #ecf0f1; /* avoid rounding gaps */
-	background: #ecf0f1;
+	outline: 5px solid #555; /* avoid rounding gaps */
+	background: #555;
 	color: #97a8b2;
 	-webkit-transform: translateX(100%);
 	transform: translateX(100%);
 }
 
 .splitlayout.open-right {
-	background: #ecf0f1;
+	background: #555;
 }
 
 .page-left {
