signup new title

--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>AgriMart</title>
+		<title>AgriMart | signup</title>
 		<meta name="description" content="Blueprint: Split Layout" />
 		<meta name="keywords" content="website template, layout, css3, transition, effect, split, dual, two sides, portfolio" />
 		<meta name="author" content="Codrops" />
@@ -28,7 +28,7 @@
 					<div class="side side-left">
 						<header class="codropsheader clearfix">
 							
-							<h1>AgriMart</h1>
+							<h1 style="font-size:200%">AgriMart</h1>
 						
 						</header>
 						<div class="intro-content">
