--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,144 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Agrimart</title>
+ 	
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+ 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta charset="utf-8">
+		<title>Agrimart</title>
+		<meta name="generator" content="Bootply" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link href="assets/bootstrap.min.css" rel="stylesheet">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <!--[if lt IE 9]>
+			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<link href="assets/styles.css" rel="stylesheet">
 </head>
 <body>
-hello
+
+    
+    
+<div class="wrapper">
+    <div class="box">
+        <div class="row row-offcanvas row-offcanvas-left">
+                      
+          
+            <!-- sidebar -->
+            <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
+              
+                        <div style="
+                          padding-left:20px;font-size: 48px;
+                                    ">AgriMart</div>
+  
+                   <hr style="border-style:dashed">
+              	<ul class="nav">
+          			<li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="glyphicon glyphicon-chevron-right"></i></a></li>
+            	</ul>
+               
+                <ul class="nav hidden-xs" id="lg-menu">
+                    <li class="active"><a href="#featured"><i class="glyphicon glyphicon-list-alt"></i> Weather</a></li>
+                    <li><a href="#stories"><i class="glyphicon glyphicon-list"></i> Market Trends</a></li>
+                    <li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> Govt. schemes</a></li>
+                    <li><a href="#"><i class="glyphicon glyphicon-refresh"></i> Top News</a></li>
+                </ul>
+                
+              
+              	<!-- tiny only nav-->
+              <ul class="nav visible-xs" id="xs-menu">
+                  	<li><a href="#featured" class="text-center"><i class="glyphicon glyphicon-list-alt"></i></a></li>
+                    <li><a href="#stories" class="text-center"><i class="glyphicon glyphicon-list"></i></a></li>
+                  	<li><a href="#" class="text-center"><i class="glyphicon glyphicon-paperclip"></i></a></li>
+                    <li><a href="#" class="text-center"><i class="glyphicon glyphicon-refresh"></i></a></li>
+                </ul>
+              <hr style="border-style:dashed">
+            </div>
+            <!-- /sidebar -->
+
+            <!-- main right col -->
+            <div class="column col-sm-10 col-xs-11" id="main" >
+
+                <!-- top nav -->
+              	<div class="navbar navbar-blue navbar-static-top">  
+                    <div class="navbar-header">
+                      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle</span>
+                        <span class="icon-bar"></span>
+          				<span class="icon-bar"></span>
+          				<span class="icon-bar"></span>
+                      </button>
+                     
+                        <%= link_to 'b' , root_path , :class=>"navbar-brand logo"%>
+                        
+                    </div>
+                  	<nav class="collapse navbar-collapse" role="navigation">
+                    <form class="navbar-form navbar-left">
+                        <div class="input-group input-group-sm" style="padding-top:8px;max-width:360px;">
+                          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                          <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                          </div>
+                        </div>
+                    </form>
+                    <ul class="nav navbar-nav">
+                      <li>
+                        <a href="/posts"><img src="/assets/home.png" alt="img" height = "30" width  = "30"></img> Home</a>
+                      </li>
+                      <li>
+                        <a href="/profiles"><img src="/assets/passport.png" alt="img" height = "30" width  = "30"></img> Profile</a>
+                      </li>
+                      <li>
+                        <a href="/stats"><img src="/assets/bill.png" alt="img" height = "30" width  = "30"></img> Stats</a>
+                      </li>
+
+                      
+                    </ul>
+                    <div style="color: #FFF; padding: 15px 10px 5px 50px; float: right; font-size: 16px;">
+        
+
+                    <a href="/logouts" class="btn btn-warning square-btn-adjust-logout">Logout</a>
+                       
+                  </div>
+                  	</nav>
+                </div>
+                <!-- /top nav -->
+
+                <div class="padding">
+                    <div class="full col-sm-9">
+                        <div class="flash">
+    <h2>
+    <% flash.each do |name, msg| %>
+    <%= content_tag :div,msg, :id => "flash_#{name}" %>
+        <%end%></h2>
+</div>
+
+  
 <%= yield %>
 
+
+<hr>
+                      
+                      <h4 class="text-center" style="color:grey;font-family:verdana,arial,sans-serif;">
+                        Copyright &copy 2015 Agrimart<sup>&reg</sup> Incorporation Ltd. All Rights Reserved
+                      <br></h4>
+                                                   
+                        
+                </div><!-- /padding -->
+
+            </div>
+            <!-- /main -->
+
+        </div>
+
+    </div>
+</div>
+
+
+	<!-- script references -->
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+		<script src="/assets/bootstrap.min.js"></script>
+		<script src="/assets/scripts.js"></script>
 </body>
 </html>
