secured login and profiles ready

--- a/app/views/signups/index.html.erb
+++ b/app/views/signups/index.html.erb
@@ -99,11 +99,11 @@
                     <div class="form-group">
 			          <div class="col-md-6">
 			            <label for="password" class="control-label">Password</label>
-                          <%= f.text_field :password, :class => "form-control" %>
+                          <%= f.password_field :password, :class => "form-control" %>
 			          </div>
 			          <div class="col-md-6">
 			            <label for="password" class="control-label">Confirm Password</label>
-                        <%= f.text_field :password_confirmation , :class => "form-control"%>
+                        <%= f.password_field :password_confirmation , :class => "form-control"%>
 			          </div>
 			        </div><br>
 
@@ -224,11 +224,11 @@
                     <div class="form-group">
 			          <div class="col-md-6">
 			            <label for="password" class="control-label">Password</label>
-                          <%= f.text_field :password, :class => "form-control" %>
+                          <%= f.password_field :password, :class => "form-control" %>
 			          </div>
 			          <div class="col-md-6">
 			            <label for="password" class="control-label">Confirm Password</label>
-                        <%= f.text_field :password_confirmation , :class => "form-control"%>
+                        <%= f.password_field :password_confirmation , :class => "form-control"%>
 			          </div>
 			        </div><br>
 
