--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -3,12 +3,13 @@ html, body {
 
 font-family: 'Open Sans', sans-serif;
    color:#555555;
-    font-size: 10px;
+   font-size: 20px;
 }
 
 h1{
-font-family: 'Open Sans', sans-serif;
-        font-size: 48px;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 38px;
 }
 
 /* our css classes*/
