--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,19 +62,11 @@
 
                 <!-- top nav -->
               	<div class="navbar navbar-blue navbar-static-top">  
-                    <div class="navbar-header">
-                      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle</span>
-                        <span class="icon-bar"></span>
-          				<span class="icon-bar"></span>
-          				<span class="icon-bar"></span>
-                      </button>
-                      <a href="/" class="navbar-brand logo">b</a>
-                  	</div>
+                    
                   	<nav class="collapse navbar-collapse" role="navigation">
-                    <form class="navbar-form navbar-left">
-                        <div class="input-group input-group-sm" style="padding-top:8px;max-width:360px;">
-                          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                    <form class="navbar-form navbar-left" action="/farmers">
+                        <div class="input-group input-group-sm" style="padding-top:5px;max-width:360px;">
+                          <input type="text" class="form-control" placeholder="Search" name="srchterm" id="srchterm">
                           <div class="input-group-btn">
                             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                           </div>
@@ -82,10 +74,10 @@
                     </form>
                     <ul class="nav navbar-nav">
                       <li>
-                        <a href="/posts"><img src="/assets/home.png" alt="img" height = "30" width  = "30"></img> Home</a>
+                        <a href="/<%= user_type%>s"><img src="/assets/home.png" alt="img" height = "30" width  = "30"></img> Home</a>
                       </li>
                       <li>
-                        <a href="/profile"><img src="/assets/passport.png" alt="img" height = "30" width  = "30"></img> Profile</a>
+                        <a href="/profiles"><img src="/assets/passport.png" alt="img" height = "30" width  = "30"></img> Profile</a>
                       </li>
                       <li>
                         <a href="/stats"><img src="/assets/bill.png" alt="img" height = "30" width  = "30"></img> Stats</a>
@@ -94,14 +86,13 @@
                       
                     </ul>
                     <div style="color: #FFF; padding: 15px 10px 5px 50px; float: right; font-size: 16px;">
-        
+                        
                         <% if current_user %>
+                        <%=current_user.email %>
+                        <a href="/log_out" class="btn btn-warning square-btn-adjust-logout">Logout</a>
+                        <%end%>        
 
-                        <%=user_type %>
-        
-
-                    <a href="/log_out" class="btn btn-warning square-btn-adjust-logout">Logout</a>
-                       <%end%>
+                  
                   </div>
                   	</nav>
                 </div>
@@ -109,12 +100,13 @@
 
                 <div class="padding">
                     <div class="full col-sm-9">
-                        <div class="flash">
-    <h2>
-    <% flash.each do |name, msg| %>
-    <%= content_tag :div,msg, :id => "flash_#{name}" %>
-        <%end%></h2>
-</div>
+                
+                <div style="font-size:30px; color:green; text-align:center;"class="flash">
+                
+                <% flash.each do |name, msg| %>
+                <%= content_tag :div,msg, :id => "flash_#{name}" %>
+                    <%end%>
+                </div>
 
   
 <%= yield %>
