--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link href="assets/bootstrap.min.css" rel="stylesheet">
+	    <link href="assets/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
+        <link href="assets/templatemo_style.css" rel="stylesheet" type="text/css">	
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
