--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,10 +1,9 @@
-
+<div class="form-horizontal templatemo-forgot-password-form templatemo-container">
 <div class="container">            
 
  <div class="col-md-8">
-<h1>Update Profile</h1>    
+     <h1>Update Profile</h1>    
         <%= form_for @user, :html => {:multipart => true} do |f|%>
-                 <div  style="color:grey; text-align:center"  class="form-inner">
                    <br>
                      <div class="form-group">
 			           
@@ -19,11 +18,11 @@
                      <div class="form-group">
 			          <div class="col-md-6">
 			            <label for="password" class="control-label">Password</label>
-                          <%= f.text_field :password, :class => "form-control" %>
+                          <%= f.password_field :password, :class => "form-control" %>
 			          </div>
 			          <div class="col-md-6">
 			            <label for="password" class="control-label">Confirm Password</label>
-                        <%= f.text_field :password_confirmation , :class => "form-control"%><br>
+                        <%= f.password_field :password_confirmation , :class => "form-control"%><br>
 			          </div>
 			        </div>
 
@@ -69,6 +68,7 @@
  
 
 <%end%>
-</div>
+
     </div>
+</div>
 </div>
