basic request creation done

--- a/app/views/farmers/index.html.erb
+++ b/app/views/farmers/index.html.erb
@@ -67,8 +67,8 @@
                            
                               <div class="panel panel-default">
                                <div class="panel-body">
-                                  <p class="lead"> Dhulia bhaje</p>
-                                  <p>special bhaje made by jaina-mama</p>
+                                  <p class="lead"> Advertisement</p>
+                                  <p>Ad Text</p>
                                   </div>
                               </div>
                       </div>
