--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,9 +1,12 @@
 <div class="form-horizontal templatemo-forgot-password-form templatemo-container">
 <div class="container">            
 
- <div class="col-md-8">
-     <h1>Update Profile</h1>    
-        <%= form_for @user, :html => {:multipart => true} do |f|%>
+<div class="col-md-8">
+
+     <div style="text-align:center;font-size: 38px;">Update Profile</div>               
+     
+     
+     <%= form_for @user, :html => {:multipart => true} do |f|%>
                    <br>
                      <div class="form-group">
 			           
